--- a/apps/website/amplify.yml
+++ b/apps/website/amplify.yml
@@ -1,19 +1,21 @@
 version: 1
-frontend:
-  phases:
-    preBuild:
-      commands:
-        - corepack enable
-        - pnpm i --frozen-lockfile
-    build:
-      commands:
-        - pnpm --filter @onetrue/app-website build
-  artifacts:
-    baseDirectory: apps/website/.next
-    files:
-      - '**/*'
-  cache:
-    paths:
-      - node_modules/**/*
-      - apps/**/node_modules/**/*
-      - packages/**/node_modules/**/*
+applications:
+  - appRoot: apps/website
+    frontend:
+      phases:
+        preBuild:
+          commands:
+            - corepack enable
+            - corepack prepare pnpm@latest --activate
+            - pnpm install
+        build:
+          commands:
+            - pnpm --filter @onetrue/app-website build
+      artifacts:
+        baseDirectory: .next
+        files:
+          - '**/*'
+      cache:
+        paths:
+          - node_modules/**/*
+          - .next/cache/**/*
