--- a/amplify.yml
+++ b/amplify.yml
@@ -11,6 +11,7 @@ applications:
         build:
           commands:
             - pnpm --filter @onetrue/app-website build
+            - ls -la ./out || true
       artifacts:
         baseDirectory: out
         files:
@@ -19,8 +20,7 @@ applications:
         paths:
           - .pnpm-store/**/*
           - node_modules/**/*
-          - apps/**/node_modules/**/*
-          - packages/**/node_modules/**/*
+          - ../../packages/**/node_modules/**/*
   
   - appRoot: apps/authenticator
     frontend:
