--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -21,7 +21,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "app/page.tsx-bad"  ],
   "exclude": [
     "node_modules"
   ]
